feat: 5b of 12th an20 exercise

--- a/courses/an20/exercises/ex12.tex
+++ b/courses/an20/exercises/ex12.tex
@@ -506,6 +506,11 @@ durch $f(x, y, z) \coloneqq (aby, abx, z)$
     \Rightarrow \gamma''(t) \perp \gamma'(t)
   \end{flalign*}
 
+\item Ermitteln Sie die Variation dieser Kurve.
+  \subparagraph{Lösung:}
+  \[
+    L(\gamma) = \int_{-\pi}^{\pi} \norm{\gamma'(t)}_2\,dt = 2 \cdot \pi \cdot a
+  \]
 \end{enumerate}
 
 \end{document}
