feat: 5d of 12th an20 exercise

--- a/courses/an20/exercises/ex12.tex
+++ b/courses/an20/exercises/ex12.tex
@@ -574,6 +574,22 @@ durch $f(x, y, z) \coloneqq (aby, abx, z)$
       \end{pmatrix} = ?}{\underbrace{\gamma'(t)}}\,dt
     = \ldots = 0
   \]
+
+\item Ist $f$ ein Potentialfeld?
+  \subparagraph{Lösung:} $\exists F \colon \mathbb{R}^3 \to \mathbb{R}$
+  mit $\nabla F = f$.
+  $F$ ist zweimal stetig differenzierbar.
+
+  $\Rightarrow H_F(x, y, z)$ ist symmetrisch
+  $\iff \frac{\partial f_1}{\partial y} = \frac{\partial f_2}{\partial x},
+  \frac{\partial f_3}{\partial x} = \frac{\partial f_1}{\partial z},
+  \frac{\partial f_2}{\partial z} = \frac{\partial f_3}{\partial y}$.
+
+  $f \colon \mathbb{R}^3 \to \mathbb{R}^3$ und $\mathbb{R}^3$ ist sternförmig.
+  $\gamma([-\pi, \pi]) \subseteq \mathbb{R}^3 \Rightarrow$ Satz von Poincaré ist
+  anwendbar.
+
+  $\Rightarrow$ Kurvenintegrale sind wegeunabhängig.
 \end{enumerate}
 
 \end{document}
