feat: 1.2 of 13th an20 homework

--- a/courses/an20/exercises/ex13.tex
+++ b/courses/an20/exercises/ex13.tex
@@ -67,6 +67,21 @@ Weiter sei $\gamma \colon [a, b] \to \mathbb{R}^{N + 1}$ definiert durch
 
 \item Beweisen Sie: Ist $\gamma$ stetig differenzierbar, so ist
   $\gamma$ von endlicher Variation.
+
+  \subparagraph{Lösung:} $f$ ist stetig differenzierbar
+  $\Rightarrow \underset{\makebox[0pt]{$L(\gamma)$ Länge der Kurve $\gamma$}}{
+    \underbrace{\text{Var}_{[a, b]} \gamma}
+  } < \infty$.
+
+  $\gamma$ ist stetig differenzierbar, falls jede der Komponenten
+  $x(t) = t, y(t) = f(t)$ stetig differenzierbar ist.
+  Da $f$ stetig differenzierbar ist, trifft das auch auf $\gamma$
+  zu.
+  Aus Proposition 7.7.2 b) der Vorlesung -
+  \textit{``Falls $\gamma$ stetig differenzierbar ist, dann ist
+    $\text{Var}_{[a,b]}(\gamma) = \int_a^b \ldots$
+  ''} folgt $\text{Var}_{[a,b]}(\gamma) < \infty$.
+
 \item Berechnen Sie die Länge von $\gamma$ im Fall
   $f \colon [0, 1] \to \mathbb{R}, f(x) = \alpha x + \beta$
 \end{enumerate}
