feat: Custom toc title

--- a/courses/an20/exam_preparations.tex
+++ b/courses/an20/exam_preparations.tex
@@ -3,6 +3,7 @@
 \usepackage{aligned-overset}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage[german]{babel}
 \usepackage{bm}
 \usepackage{chngcntr}
 \usepackage[shortlabels]{enumitem}
@@ -60,6 +61,9 @@
 % Hide the chapter and section numbers
 \renewcommand\thechapter{}
 \renewcommand\thesection{}
+% Custom title for table of contents
+\renewcaptionname{german}{\contentsname}{Prüfungsrelevante Aufgaben}
+
 
 \begin{document}
 \tableofcontents
