--- a/courses/an20/exam_preparations.tex
+++ b/courses/an20/exam_preparations.tex
@@ -305,6 +305,15 @@ Maximum und Minimum besitzt.
 
 \end{enumerate}
 
+\section{Blatt 07 - Hausaufgabe 2}
+
+Der Raum $\mathbb{R}^{N \times N}$ sei durch eine
+Matrixnorm normiert.
+Ermitteln Sie von $f \colon \mathbb{R}^{N \times N} \to \mathbb{R}^{N \times N}$
+mit $f(X) \coloneqq X^2$ die Weierstraßsche Zerlegungsformel für ein festes
+$X_0 \in \mathbb{R}^{N \times N}$.
+Bestimmen Sie daraus die Ableitung $f'(X_0)$.
+
 \chapter{Lösungen}
 
 \section{Blatt 03 - Aufgabe 4}
@@ -1156,5 +1165,21 @@ $x \in K$.
   \end{align*}
   Reel: $f(x) \overset{x \ne 0}= \frac{1}{x} \Rightarrow f'(x) = -\frac{1}{x^2} = -x^{-1}x^{-1}$
 \end{enumerate}
+
+\section{Blatt 07 - Hausaufgabe 2}
+
+Es gilt
+\begin{align*}
+  f(X_0 + h) - f(x_0) &= (X_0 + h)^2 - X_0^2 = X_0^2 + 2X_0h + h^2 - X_0^2 \\
+                      &= \underset{h \mapsto 2X_0h \text{ ist linear}}{\underbrace{2X_0h}} +
+                        \underset{r(h)}{\underbrace{h^2}}
+\end{align*}
+\[
+  \frac{\norm{r(h)}}{\norm{h}} = \frac{\norm{h^2}}{\norm{h}}
+  \leq \frac{\norm{h} \cdot \norm{h}}{\norm{h}} = \norm{h}
+  \overset{h \to 0}\longrightarrow 0
+\]
+
+$\Rightarrow f'(X_0)(h) = 2X_0h$
 
 \end{document}
